added form for create book

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
     <div>
         <div>
             <!-- Таблица книг -->
+	        {% include "partial_create_book_form.html" %}
 
             <table>
                 <thead>
