--- a/templates/base.html
+++ b/templates/base.html
@@ -1,77 +1,93 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <title>{% block title %}Books{% endblock title %}</title>
+	<meta charset="utf-8">
+	<title>{% block title %}Books{% endblock title %}</title>
 </head>
 
-<body>
+<body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
 
 <div>
-    <div>
-        <div>
-            <!-- Таблица книг -->
-	        {% include "partial_create_book_form.html" %}
+	<div>
+		<div>
+			<!-- Таблица книг -->
+			{% include "partial_create_book_form.html" %}
 
-            <table>
-                <thead>
-                <tr>
-                    <!-- Заголовки столбцов таблицы -->
+			<table>
+				<thead>
+				<tr>
+					<!-- Заголовки столбцов таблицы -->
 
-                    <!-- Заголовок номера книги -->
-                    <th scope="col" style="width: 10%">
-                        <small>
-                            Num.
-                        </small>
-                    </th>
+					<!-- Заголовок номера книги -->
+					<th scope="col" style="width: 10%">
+						<small>
+							Num.
+						</small>
+					</th>
 
-                    <!-- Заголовок названия книги -->
-                    <th scope="col" style="width: 26%">
-                        <small>
-                            Title
-                        </small>
-                    </th>
+					<!-- Заголовок названия книги -->
+					<th scope="col" style="width: 26%">
+						<small>
+							Title
+						</small>
+					</th>
 
-                    <!-- Заголовок автора книги -->
-                    <th scope="col" style="width: 26%">
-                        <small>
-                            Author
-                        </small>
-                    </th>
+					<!-- Заголовок автора книги -->
+					<th scope="col" style="width: 26%">
+						<small>
+							Author
+						</small>
+					</th>
 
-                    <!-- Заголовок цены книги -->
-                    <th scope="col" style="width: 11%">
-                        <small>
-                            Price ($)
-                        </small>
-                    </th>
+					<!-- Заголовок цены книги -->
+					<th scope="col" style="width: 11%">
+						<small>
+							Price ($)
+						</small>
+					</th>
 
-                    <!-- Заголовок статуса книги -->
-                    <th scope="col" style="width: 11%">
-                        <small>
-                            Status
-                        </small>
-                    </th>
+					<!-- Заголовок статуса книги -->
+					<th scope="col" style="width: 11%">
+						<small>
+							Status
+						</small>
+					</th>
 
-                    <!-- Заголовок кнопок действия -->
-                    <th scope="col" style="width: 16%">
-                        <small>
-                            Actions
-                        </small>
-                    </th>
+					<!-- Заголовок кнопок действия -->
+					<th scope="col" style="width: 16%">
+						<small>
+							Actions
+						</small>
+					</th>
 
-                </tr>
-                </thead>
+				</tr>
+				</thead>
 
-                <!-- Список книг -->
-                <tbody id="book-list">
-                {% include "partial_book_list.html" %}
-                </tbody>
+				<!-- Список книг -->
+				<tbody id="book-list">
+				{% include "partial_book_list.html" %}
+				</tbody>
 
-            </table>
-        </div>
-    </div>
+			</table>
+		</div>
+	</div>
 </div>
 
+<script src="https://unpkg.com/htmx.org@1.9.4"></script>
+<script>
+    function cngElementsAtr(cls, atr, val) {
+        var elems = document.getElementsByClassName(cls);
+        for (var i = 0; i < elems.length; i++) {
+            elems[i][atr] = val;
+        }
+    }
+
+    document.body.addEventListener('htmx:afterRequest', (event) => {
+        path_str = event.detail.pathInfo.requestPath;
+        if (path_str.includes('create_book')) {
+            cngElementsAtr('clrtxt', 'value', '');
+        }
+    });
+</script>
 </body>
 </html>
