--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,19 @@
 						<!-- Заголовок номера книги -->
 						<th scope="col" style="width: 10%">
 							<small>
-								Num.
+								No.
+								<a href=""
+								   hx-get="{% url 'book_list_sort' filter='id' direction='ascend' %}"
+								   hx-target="#book-list"
+								   hx-swap="innerHTML">
+									⇓
+								</a>
+								<a href=""
+								   hx-get="{% url 'book_list_sort' filter='id' direction='descend' %}"
+								   hx-target="#book-list"
+								   hx-swap="innerHTML">
+									⇑
+								</a>
 							</small>
 						</th>
 
@@ -29,6 +41,18 @@
 						<th scope="col" style="width: 26%">
 							<small>
 								Title
+								<a href=""
+								   hx-get="{% url 'book_list_sort' filter='title' direction='ascend' %}"
+								   hx-target="#book-list"
+								   hx-swap="innerHTML">
+									⇓
+								</a>
+								<a href=""
+								   hx-get="{% url 'book_list_sort' filter='title' direction='descend' %}"
+								   hx-target="#book-list"
+								   hx-swap="innerHTML">
+									⇑
+								</a>
 							</small>
 						</th>
 
@@ -36,6 +60,18 @@
 						<th scope="col" style="width: 26%">
 							<small>
 								Author
+								<a href=""
+								   hx-get="{% url 'book_list_sort' filter='author' direction='ascend' %}"
+								   hx-target="#book-list"
+								   hx-swap="innerHTML">
+									⇓
+								</a>
+								<a href=""
+								   hx-get="{% url 'book_list_sort' filter='author' direction='descend' %}"
+								   hx-target="#book-list"
+								   hx-swap="innerHTML">
+									⇑
+								</a>
 							</small>
 						</th>
 
@@ -43,6 +79,18 @@
 						<th scope="col" style="width: 11%">
 							<small>
 								Price ($)
+								<a href=""
+								   hx-get="{% url 'book_list_sort' filter='price' direction='ascend' %}"
+								   hx-target="#book-list"
+								   hx-swap="innerHTML">
+									⇓
+								</a>
+								<a href=""
+								   hx-get="{% url 'book_list_sort' filter='price' direction='descend' %}"
+								   hx-target="#book-list"
+								   hx-swap="innerHTML">
+									⇑
+								</a>
 							</small>
 						</th>
 
@@ -50,13 +98,18 @@
 						<th scope="col" style="width: 11%">
 							<small>
 								Status
-							</small>
-						</th>
-
-						<!-- Заголовок кнопок действия -->
-						<th scope="col" style="width: 16%">
-							<small>
-								Actions
+								<a href=""
+								   hx-get="{% url 'book_list_sort' filter='read' direction='descend' %}"
+								   hx-target="#book-list"
+								   hx-swap="innerHTML">
+									⇓
+								</a>
+								<a href=""
+								   hx-get="{% url 'book_list_sort' filter='read' direction='ascend' %}"
+								   hx-target="#book-list"
+								   hx-swap="innerHTML">
+									⇑
+								</a>
 							</small>
 						</th>
 
