--- a/templates/base.html
+++ b/templates/base.html
@@ -1,115 +1,129 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
 	<title>{% block title %}Books{% endblock title %}</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+	      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+	<link rel="stylesheet" href="{% static 'base.css' %}">
 </head>
 
 <body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
 
-<div>
-	<div>
-		<div>
-			<!-- Таблица книг -->
+<div class="container">
+	<div class="row">
+		<div class="col">
+			<!-- Форма для добавления новой книги -->
 			{% include "partial_create_book_form.html" %}
-			<form>
-				<table>
+
+			<!-- Таблица книг -->
+			<form class="form-inline">
+				<table class="table table-bordered table-sm mt-5">
 					<thead>
 					<tr>
 						<!-- Заголовки столбцов таблицы -->
 
 						<!-- Заголовок номера книги -->
-						<th scope="col" style="width: 10%">
+						<th scope="col" style="width: 10%" class="text-center">
 							<small>
 								No.
 								<a href=""
 								   hx-get="{% url 'book_list_sort' filter='id' direction='ascend' %}"
 								   hx-target="#book-list"
 								   hx-swap="innerHTML">
-									⇓
+									<i class="table-icon bi bi-arrow-down-square ms-1 id-ascend disabled-button"></i>
 								</a>
 								<a href=""
 								   hx-get="{% url 'book_list_sort' filter='id' direction='descend' %}"
 								   hx-target="#book-list"
 								   hx-swap="innerHTML">
-									⇑
+									<i class="table-icon bi bi-arrow-up-square id-descend"></i>
 								</a>
 							</small>
 						</th>
 
 						<!-- Заголовок названия книги -->
-						<th scope="col" style="width: 26%">
+						<th scope="col" style="width: 26%" class="text-center">
 							<small>
 								Title
 								<a href=""
 								   hx-get="{% url 'book_list_sort' filter='title' direction='ascend' %}"
 								   hx-target="#book-list"
 								   hx-swap="innerHTML">
-									⇓
+									<i class="table-icon bi bi-arrow-down-square ms-1 title-ascend"></i>
 								</a>
 								<a href=""
 								   hx-get="{% url 'book_list_sort' filter='title' direction='descend' %}"
 								   hx-target="#book-list"
 								   hx-swap="innerHTML">
-									⇑
+									<i class="table-icon bi bi-arrow-up-square title-descend"></i>
 								</a>
 							</small>
 						</th>
 
 						<!-- Заголовок автора книги -->
-						<th scope="col" style="width: 26%">
+						<th scope="col" style="width: 26%" class="text-center">
 							<small>
 								Author
 								<a href=""
 								   hx-get="{% url 'book_list_sort' filter='author' direction='ascend' %}"
 								   hx-target="#book-list"
 								   hx-swap="innerHTML">
-									⇓
+									<i class="table-icon bi bi-arrow-down-square ms-1 author-ascend"></i>
 								</a>
 								<a href=""
 								   hx-get="{% url 'book_list_sort' filter='author' direction='descend' %}"
 								   hx-target="#book-list"
 								   hx-swap="innerHTML">
-									⇑
+									<i class="table-icon bi bi-arrow-up-square author-descend"></i>
 								</a>
 							</small>
 						</th>
 
 						<!-- Заголовок цены книги -->
-						<th scope="col" style="width: 11%">
+						<th scope="col" style="width: 11%" class="text-center">
 							<small>
 								Price ($)
 								<a href=""
 								   hx-get="{% url 'book_list_sort' filter='price' direction='ascend' %}"
 								   hx-target="#book-list"
 								   hx-swap="innerHTML">
-									⇓
+									<i class="table-icon bi bi-arrow-down-square ms-1 price-ascend"></i>
 								</a>
 								<a href=""
 								   hx-get="{% url 'book_list_sort' filter='price' direction='descend' %}"
 								   hx-target="#book-list"
 								   hx-swap="innerHTML">
-									⇑
+									<i class="table-icon bi bi-arrow-up-square price-descend"></i>
 								</a>
 							</small>
 						</th>
 
 						<!-- Заголовок статуса книги -->
-						<th scope="col" style="width: 11%">
+						<th scope="col" style="width: 11%" class="text-center">
 							<small>
 								Status
 								<a href=""
 								   hx-get="{% url 'book_list_sort' filter='read' direction='descend' %}"
 								   hx-target="#book-list"
 								   hx-swap="innerHTML">
-									⇓
+									<i class="table-icon bi bi-arrow-down-square ms-1 read-descend"></i>
 								</a>
 								<a href=""
 								   hx-get="{% url 'book_list_sort' filter='read' direction='ascend' %}"
 								   hx-target="#book-list"
 								   hx-swap="innerHTML">
-									⇑
+									<i class="table-icon bi bi-arrow-up-square read-ascend"></i>
 								</a>
+							</small>
+						</th>
+
+						<!-- Заголовок кнопок действия -->
+						<th scope="col" style="width: 16%" class="text-center">
+							<small>
+								Actions
 							</small>
 						</th>
 
@@ -128,21 +142,10 @@
 </div>
 
 <script src="https://unpkg.com/htmx.org@1.9.4"></script>
-<script>
-    function cngElementsAtr(cls, atr, val) {
-        var elems = document.getElementsByClassName(cls);
-        for (var i = 0; i < elems.length; i++) {
-            elems[i][atr] = val;
-        }
-    }
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
 
-    document.body.addEventListener('htmx:afterRequest', (event) => {
-        path_str = event.detail.pathInfo.requestPath;
-        if (path_str.includes('create_book')) {
-            cngElementsAtr('clrtxt', 'value', '');
-        }
-    });
-</script>
 <script>
     function cngElementsAtr(cls, atr, val) {
         var elems = document.getElementsByClassName(cls);
@@ -163,6 +166,13 @@
             }
         } else if (path_str.includes('book_detail')) {
             cngElementsAtr('disbtn', 'disabled', false);
+        } else if (path_str.includes('book_list_sort')) {
+            path_arr = path_str.split('/');
+            path_arr.pop()
+            curr_class = path_arr.pop()
+            curr_class = path_arr.pop() + '-' + curr_class
+            document.getElementsByClassName('disabled-button')[0].classList.remove('disabled-button');
+            document.getElementsByClassName(curr_class)[0].classList.add('disabled-button');
         }
     });
 </script>
